# happybudget-api

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  Standards.md  deploy_to_app.sh  deploy_to_dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.ebextensions/: django.config
postgres/: dockerfile
src/: manage.py
src/greenbudget/: __init__.py  urls.py  wsgi.py
src/happybudget/: celery.py  urls.py  wsgi.py
tests/: ReadMe.md  __init__.py  conftest.py  factories.py  fixtures.py  http.py  models.py  permissions.py  plaid.py  static.py  stripe.py  stripe_fixtures.py
tests/account/: test_actual_api.py  test_api.py  test_budget_api.py  test_budget_markup_api.py  test_budget_subaccount_api.py  test_cache.py  test_detail_cache.py  test_group_api.py  test_groups_cache.py  test_history_api.py  test_markup_api.py  test_markups_cache.py  test_model.py  test_ordering.py  test_permissions.py  test_signals.py  test_subaccount_api.py  test_subaccounts_cache.py  test_template_api.py  test_template_markup_api.py  test_template_subaccount_api.py
tests/actual/: test_api.py  test_attachments_api.py  test_history_api.py  test_ordering.py  test_permissions.py  test_signals.py  test_type_api.py
tests/authentication/: conftest.py  test_api.py  test_auth_backends.py  test_email_confirmation.py  test_forgot_password.py  test_middleware.py  test_public_token_api.py  test_recover_password.py  test_serializers.py  test_share_token_api.py  test_social_login.py  test_utils.py  test_validate_auth_token.py  test_validate_public_token.py  test_validate_share_token.py  test_validate_sliding_token.py  test_verify_email.py
tests/billing/: test_api.py  test_permissions.py
tests/budget/: conftest.py  test_account_api.py  test_accounts_cache.py  test_actual_api.py  test_actual_owners.py  test_actuals_cache.py  test_api.py  test_budget_items_tree_api.py  test_bulk_import_actuals.py  test_cache.py  test_collaborator_api.py  test_detail_cache.py  test_duplication.py  test_fringes_api.py  test_fringes_cache.py  test_group_api.py  test_groups_cache.py  test_markup_api.py  test_markups_cache.py  test_model.py  test_ordering.py  test_owner_tree_api.py  test_permissions.py  test_public_token_api.py  test_share_token_api.py  test_subaccounts_tree_api.py  test_templates_api.py
tests/collaborator/: test_api.py
tests/comment/: test_api.py
tests/contact/: test_api.py  test_attachments_api.py  test_cache.py  test_ordering.py
tests/django_utils/: test_storages.py
tests/factories/: __init__.py  base.py  factories.py  fixtures.py  lazy.py
tests/fringe/: test_api.py  test_color_api.py  test_ordering.py  test_permissions.py  test_signals.py  test_utils.py
tests/group/: test_api.py  test_color_api.py  test_permissions.py  test_signals.py  test_tasks.py
tests/integrations/: test_plaid_api.py  test_plaid_client.py
tests/io/: test_api.py  test_serializers.py  test_signals.py  test_tasks.py  test_utils.py
tests/jwt/: test_api.py  test_auth_backends.py  test_middleware.py  test_serializers.py  test_utils.py  test_views.py
tests/markup/: test_api.py  test_budget_api.py  test_permissions.py  test_signals.py  test_template_api.py
tests/pdf/: test_api.py  test_signals.py
tests/subaccount/: conftest.py  test_actual_api.py  test_api.py  test_attachments_api.py  test_budget_account_api.py  test_budget_markup_api.py  test_cache.py  test_concurrency.py  test_group_api.py  test_groups_cache.py  test_history_api.py  test_markup_api.py  test_markups_cache.py  test_model.py  test_ordering.py  test_permissions.py  test_signals.py  test_tasks.py  test_template_account_api.py  test_unit_api.py  (+2 more)
(+981 files in other folders)
